# ticket-system

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
templates/: kanban.html
tests/: test_core.py  test_db.py
tms/: __init__.py  api.py  cli_handler.py  core.py  db.py  utils.py
